[project]
name = "thefuckllm"
version = "0.1.0"
description = "CLI helper powered by local LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.4",
    "huggingface-hub>=1.2.3",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.3.5",
    "platformdirs>=4.5.1",
    "typer[all]>=0.20.0",
]

[project.scripts]
tfllm = "thefuckllm.cli:main"

[tool.uv]
package = true
